# emx-onnx-cgen

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  OFFICIAL_ONNX_FILE_SUPPORT.md  OFFICIAL_ONNX_FILE_SUPPORT_HISTOGRAM.md  ONNX_ERRORS.md  ONNX_ERRORS_HISTOGRAM.md  ONNX_SUPPORT.md  README.md  SUPPORT_OPS.md  build_backend.py  infineon_fully_connected_model.c  infineon_fully_connected_model.onnx  infineon_lstm_small.c  infineon_lstm_small.onnx  infineon_simple_cnn_3x3_small.c  infineon_simple_cnn_3x3_small.onnx  infineon_simple_cnn_3x3_small_onnxcgen.c  packaging_backend.py  pyproject.toml  pytest.ini  requirements-ci.txt
.codex-temp/: graph_changes.patch  pr_body_sequence_map.md
.codex-temp/identity_seq_keep/: model.c
.codex-temp/loop13_keep/: model.c
.codex-temp/loop13_keep2/: model.c
.codex-temp/loop16_keep/: model.c
.codex-temp/qdq_normal/: model.c  testbench.json
.codex-temp/qdq_pernode/: model.c  testbench.json
.codex-temp/seqmap1_keep/: model.c
.github/: copilot-instructions.md  dependency-review-config.yml
.github/workflows/: copilot-setup-steps.yml  dependency-review.yml  linux-release.yml  python-compatibility.yml  release.yml  tests.yml  windows-release.yml
ci-artifacts/: reference-changed-files.txt  reference-updates.diff
docs/: development.md  image_decoder.md  operator-metadata.json  operator-notes.md  output-format.md
docs/onnx-community-day/: .gitignore  README.md  agenda.js  alts-dynamic.js  build-deck-v3.js  build-deck.js  closing.js  emmtrix-ai-compiler-workflow.md  lessons-learned.md  onnx-community-day-aot-onnx-to-c-v2.pptx  onnx-community-day-aot-onnx-to-c-v3.pptx  onnx-community-meetup-2026-agenda-cest.md  outline.md  package-lock.json  source-input.md  story.md  talk-brief.md  thankyou.js  unbounded-alts.js
presentation/: README.md  onnx-community-day-aot-onnx-to-c-v1.pptx  outline.md
prompts/: fix_random_test.py
reports/: backend_fail_but_internal_ok.md  pytest_speed_report.md
src/emx_onnx_cgen/: _build_info.py  _version.py  cli.py  compiler.py  determinism.py  dtypes.py  errors.py  input_dim_overrides.py  invariants.py  onnx_import.py  onnxruntime_utils.py  ops.py  sequence_shape_hints.py  shape_inference_report.py  symbolic_shapes.py  testbench.py  testbench_output_format.py  validation.py  verification.py
src/onnx2c/: _build_info.py  cli.py  compiler.py  dtypes.py  onnx_import.py
src/shared/: __init__.py  fft_codegen.py  fft_kernel_registry.py  scalar_functions.py  scalar_types.py  ulp.py
templates/: arg_reduce_op.c.j2  attention_op.c.j2  average_pool_op.c.j2  batch_norm_op.c.j2  binary_op.c.j2  concat_op.c.j2  constant_of_shape_op.c.j2  conv_op.c.j2  cumsum_op.c.j2  gather_elements_op.c.j2  gather_op.c.j2  gemm_op.c.j2  grid_sample_op.c.j2  logsoftmax_op.c.j2  lrn_op.c.j2  lstm_op.c.j2  matmul_op.c.j2  maxpool_op.c.j2  model.c.j2  negative_log_likelihood_loss_op.c.j2  nonmax_suppression_op.c.j2  pad_op.c.j2  reduce_op.c.j2  reshape_op.c.j2  resize_op.c.j2  shape_op.c.j2  slice_op.c.j2  softmax_cross_entropy_loss_op.c.j2  softmax_op.c.j2  testbench.c.j2  transpose_op.c.j2  trilu_op.c.j2  unary_op.c.j2  where_op.c.j2
test/: age_googlenet.c
test/tmp/: model.c
tests/: conftest.py  local_onnx_expected_errors.json  official_onnx_expected_errors.json  official_onnx_first_500_expected_errors.json  test_add_mvp.py  test_cli.py  test_codegen_data_file.py  test_codegen_signature.py  test_compiler.py  test_determinism.py  test_endtoend_features.py  test_endtoend_ops.py  test_float8_dtypes.py  test_golden.py  test_golden_ops.py  test_image_decoder.py  test_input_dim_overrides.py  test_invariants.py  test_ir_op_io_contract.py  test_loop_codegen.py  test_mixed_dtypes.py  test_multi_output.py  test_negative_log_likelihood_loss.py  test_official_onnx_files.py  test_official_onnx_files_docs.py  test_onnx_backend.py  test_onnx_backend_runner.py  test_onnx_import.py  test_ops.py  test_ort_onnx_divergence.py  test_shape_inference_report.py  test_shared_fft_codegen.py  test_shared_fft_kernel_registry.py  test_shared_ulp.py  test_subbyte_dtypes.py  test_symbolic_shapes.py  test_testbench.py  test_testbench_output_format.py
tests/expected_errors/: emx-ort-test-artifacts-org__artifacts__onnxruntime__test__contrib_ops__attention_lstm_op_test__BidirectionLstmWithBahdanauAM2BatchShortenSeqLen_run0__model.onnx.json  emx-ort-test-artifacts-org__artifacts__onnxruntime__test__contrib_ops__attention_lstm_op_test__BidirectionLstmWithBahdanauAMShortenSeqLength_run0__model.onnx.json  emx-ort-test-artifacts-org__artifacts__onnxruntime__test__contrib_ops__attention_lstm_op_test__ForwardLstmWithBahdanauAMShortenSeqLength_run0__model.onnx.json  emx-ort-test-artifacts-org__artifacts__onnxruntime__test__contrib_ops__attention_lstm_op_test__ForwardLstmWithBahdanauAMZeroAttention_run0__model.onnx.json  emx-ort-test-artifacts-org__artifacts__onnxruntime__test__contrib_ops__attention_lstm_op_test__ForwardLstmWithBahdanauAM_run0__model.onnx.json  emx-ort-test-artifacts-org__artifacts__onnxruntime__test__contrib_ops__attention_lstm_op_test__ReverseLstmWithBahdanauAMShortenSeqLength_run0__model.onnx.json  emx-ort-test-artifacts-org__artifacts__onnxruntime__test__contrib_ops__attention_op_test__Attention3DMask_run0__model.onnx.json  emx-ort-test-artifacts-org__artifacts__onnxruntime__test__contrib_ops__attention_op_test__Attention3DMask_run1__model.onnx.json  emx-ort-test-artifacts-org__artifacts__onnxruntime__test__contrib_ops__attention_op_test__AttentionBatch1AttentionBias_run0__model.onnx.json  (+6502 more)
tests/golden/: add_initializer_model.c  add_model.c  (+98 more)
tmp/: array_feature_extractor_edit.py  emx_regex_cgen-0.1.3-py3-none-any.whl  model.c
tools/: generate_microsoft_op_testdata.py  local_release_linux.sh  local_release_windows.ps1
(+437 files in other folders)
