[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=7.0"]
build-backend = "packaging_backend"
backend-path = ["."]

[project]
name = "emx-onnx-cgen"
description = "emmtrix ONNX-to-C Code Generator"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dynamic = ["version"]
license = { file = "LICENSE" }
dependencies = [
    "emx-regex-cgen==0.2.0",
    "jinja2",
    "numpy",
    "onnx",
    # >=6.33.5: fixes GHSA-8qvm-5x2c-j2w7/CVE-2025-4565 (DoS, <4.25.8 / >=5.26.0rc1,<5.29.5 / >=6.30.0rc1,<6.31.1)
    #           and GHSA-7gcm-g887-7qv7/CVE-2026-0994 (JSON recursion bypass, <5.29.6 / >=6.30.0rc1,<=6.33.4)
    "protobuf>=6.33.5",
]

[project.optional-dependencies]
verify = [
    # ORT 1.24.x no longer publishes Linux cp310 wheels, so keep the latest
    # compatible release for Python 3.10 while using the current release on 3.11+.
    "onnxruntime==1.23.2; python_version < '3.11'",
    "onnxruntime==1.24.4; python_version >= '3.11'",
]
backend-tests = [
    "pytest",
]

[project.urls]
Homepage = "https://www.emmtrix.com/wiki/emmtrix_ONNX-to-C_Code_Generator"
Repository = "https://github.com/emmtrix/emx-onnx-cgen"
Issues = "https://github.com/emmtrix/emx-onnx-cgen/issues"

[project.scripts]
emx-onnx-cgen = "emx_onnx_cgen.cli:main"
emx-onnx-cgen-backend-test = "emx_onnx_cgen.onnx_backend.runner:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.package-data]
emx_onnx_cgen = ["templates/*.j2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/emx_onnx_cgen/_version.py"
local_scheme = "no-local-version"

[tool.ruff]
extend-exclude = [
    "emx-ort-test-artifacts-org",
    "emx-pytorch2c-org",
    "onnx-org",
]

[tool.vulture]
exclude = [
    "emx-ort-test-artifacts-org/",
    "emx-pytorch2c-org/",
    "onnx-org/",
    "tests/",
]
min_confidence = 80
paths = ["src"]
